...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/uscpolaroid" />

    <ImageView
        android:id="@+id/laButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:backgroundTint="#FDF6EC"
        android:elevation="0dp"
        android:fontFamily="@font/ruda"
        android:foreground="?attr/selectableItemBackground"
...
