...
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:background="@drawable/round"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="58dp"
        android:backgroundTint="#FDF6EC"
...
