...
    android:layout_height="match_parent"
    android:background="#FDF6EC"
    tools:context=".planning.LocationsActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:background="@drawable/round"
        android:backgroundTint="#11CA9D"
        android:elevation="0dp"
        android:fontFamily="@font/ruda"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@null"
        android:text="NEXT"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationList"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tourType"
        android:layout_width="294dp"
        android:layout_height="50dp"
...
