...
        app:layout_constraintEnd_toStartOf="@+id/day"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reviewItineraryButton"
        android:layout_width="191dp"
        android:layout_height="95dp"
        android:background="@drawable/round"
        android:backgroundTint="#11CA9D"
        android:elevation="0dp"
        android:fontFamily="@font/ruda"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@null"
        android:text="CREATE TOUR"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day"
...
